# eds-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
eds/: __init__.py  __main__.py  exit_codes.py  public_key.py  version.py
eds/cli/: config_wizard.py  driver.py  enroll.py  import_.py  main.py  server.py
eds/core/: driver.py  models.py  retry.py  tracker.py
eds/drivers/: __init__.py  azure_blob.py  base.py  eventhub.py  file_.py  kafka_.py  mysql.py  postgres.py  s3.py  snowflake_.py  sqlserver.py
eds/importer/: importer.py
eds/infrastructure/: alerting.py  config.py  consumer.py  metrics.py  notification.py  schema_registry.py  tracker.py  upgrade.py
tests/: test_alerting.py  test_config_alerting.py  test_import_retry.py  test_models.py  test_retry.py  test_tracker.py
tests/drivers/: conftest.py  test_mysql_driver.py  test_postgres_driver.py  test_schema_migration.py  test_sqlserver_driver.py
tests/helpers/: driver_helpers.py
